# whale-cli

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  config.example.json  mcp.example.json  pyproject.toml  requirements.txt
deploy/systemd/: whale-web.service.example
docs/: 参考.md  垂直学习智能体-模块设计.md  技术文档写作总结.md  教程分层改造与逐章修改意见.md  教程小节标准化写作模板.md  教程问题汇总.md  新手入门.md  测试报告.md  结构说明.md  部署与发布.md
docs/新手入门/: 00-为什么要做这个CLI.md  01-5分钟体验-能帮你做什么.md  02-REPL与会话-把聊天框做成系统.md  03-最小LLMClient-先打通对话.md  04-AgentLoopv0-从聊天到会做事的循环.md  05-Toolsv0-最小工具箱.md  06-Toolsv1-写文件与跑命令.md  07-TodoList-把计划变成可追踪任务.md  08-Skills-把套路沉淀成能力包.md  09-SessionNote与上下文压缩-稳态系统.md  10-Part1结尾-Demo清单.md  11-Agents与系统提示词-把配置从代码里拿出来.md  12-Hooks-把自动化护栏挂在循环外.md  13-Subagents-把复杂任务交给干净上下文.md  14-BackgroundTasks-让慢任务后台跑.md  15-Skills进阶-按来源分层发现.md  16-MCP与插件-把外部能力接进工具池.md  17-AGENTS与项目上下文-让仓库规则自动生效.md  18-进阶收束-WhaleCLI扩展路线.md  19-四种Loop模式-让Agent按条件持续工作.md  20-附件与文件输入-让多格式资料进入任务.md  (+8 more)
examples/: mcp_echo_server.py
scripts/: build_web.sh  release_check.sh
tests/: conftest.py  test_approval.py  test_background.py  test_compaction.py  test_datawhale_subagent.py  test_e2e.py  test_file_tools.py  test_hooks.py  test_learning.py  test_llm_client.py  test_loop_commands.py  test_loop_modes.py  test_mcp.py  test_plugin_and_subagent.py  test_project_context.py  test_runtime.py  test_session_store.py  test_skills_and_agents.py  test_soul_integration.py  test_todo.py  test_toolset.py  test_webui_settings.py  test_workspace_security.py
webui/: README.md  index.html  package-lock.json  package.json  server.py  vite.config.js
(+91 files in other folders)
